added spring web security

--- a/initial/src/main/resources/templates/index.html
+++ b/initial/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <h1>Welcome!</h1>
 
         <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p> <br/>
-        <a href="/register">Click here to register</a> <br/>
+        <a href="/register">Click here to register (see name)</a> <br/>
         <a href="/imageUpload">Click here to upload image</a> <br/>
     </div>
 </body>
