added page for math expressions with css support

--- a/initial/src/main/resources/templates/imageUpload/imageUpload_form.html
+++ b/initial/src/main/resources/templates/imageUpload/imageUpload_form.html
@@ -1,3 +1,8 @@
+<!doctype html>
+<html>
+<head>
+    <title>Image upload</title>
+</head>
 <body>
 <section class="my-5">
     <div class="container">
@@ -15,5 +20,7 @@
             </div>
         </div>
     </div>
+    <a href="/index">Go to main page</a> <br/>
 </section>
 </body>
+</html>
