--- a/initial/src/main/resources/templates/register/login.html
+++ b/initial/src/main/resources/templates/register/login.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
     <head>
         <title>Spring Security Example </title>
+
     </head>
     <body>
         <div th:if="${param.error}">
@@ -15,5 +16,6 @@
             <div><label> Password: <input type="password" name="password"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
+        <a href="/index">Go to main page</a> <br/>
     </body>
 </html>
