--- a/initial/src/main/resources/templates/register/register_form.html
+++ b/initial/src/main/resources/templates/register/register_form.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>User Registration</title>
+    <meta charset="ISO-8859-1">
+    <title>User Registration</title>
+
 </head>
 <body>
 <div align="center">
@@ -14,7 +15,9 @@
         <label>Second name:</label>
         <input type="text" th:field="*{secondName}" /><br/>
 
-        <button type="submit">Register</button>    
+        <button type="submit">Register</button>
+
+        <a href="/index">Go to main page</a> <br/> 
     </form>
 </div>
 </body>
