--- a/initial/src/main/resources/templates/register/register_success.html
+++ b/initial/src/main/resources/templates/register/register_success.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration Success</title>
+
 </head>
 <body>
 <div align="center">
@@ -11,6 +12,7 @@
     <span th:text="${user.firstName}"></span><br/>
     <span>Second name:</span>
     <span th:text="${user.secondName}"></span><br/>
+    <a href="/index">Go to main page</a> <br/>
 </div>
 </body>
 </html>
